# housou

./: pyproject.toml
src/housou/core/: cli.py  client.py  server.py
