[project]
name = "housou"
version = "0.1.0"
description = ""
authors = [{ name = "Ahmad Azwar Annas", email = "ahmadazw2@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["asyncio (>=3.4.3,<4.0.0)", "websockets (>=15.0.1,<16.0.0)"]

[tool.poetry]
packages = [{ include = "housou", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
housou = "housou.core.cli:main"
